cmake_minimum_required(VERSION 3.16)

message(STATUS "CMAKE_CURRENT_SOURCE_DIR is ${CMAKE_CURRENT_SOURCE_DIR}")

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)

message(STATUS "EXECUTABLE_OUTPUT_PATH is ${EXECUTABLE_OUTPUT_PATH}")

project(Seq2Fun)

add_subdirectory(src)

message(STATUS "CMAKE_RUNTIME_OUTPUT_DIRECTORY is ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")

